[package]
name = "bedrs"
version = "0.2.14"
edition = "2021"
license = "MIT"
description = "Genomic interval library in rust"
repository = "https://github.com/noamteyssier/bedrs"
documentation = "https://docs.rs/bedrs"
categories = ["science"]
keywords = ["interval", "bioinformatics", "ranges", "genomic", "bed"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
num-traits = "0.2.16"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = { version = "1.8.0", optional = true }
serde = { version = "1.0.181", features = ["derive"], optional = true }
thiserror = "1.0.44"

[features]
serde = ["dep:serde"]
rayon = ["dep:rayon"]

[dev-dependencies]
criterion = "0.5.1"
bincode = "1.3.3"
tinystr = "0.7.1"
csv = "1.3.0"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
debug = true
